<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/milk"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_milk_cup" />

            <TextView
                android:id="@+id/milk_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/chai_patti"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_spoon_chai_patti" />

            <TextView
                android:id="@+id/patti_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/water"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_water_cup" />

            <TextView
                android:id="@+id/water_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sugar"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_spoon_sugar" />

            <TextView
                android:id="@+id/sugar_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>