<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mudBrown"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam_bold"
            android:text="Chai"
            android:textAlignment="center"
            android:textColor="@color/pale"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/tea_cup_logo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_tea_cup_steam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam_bold"
            android:text="Baaz"
            android:textAlignment="center"
            android:textColor="@color/pale"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/people"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <it.sephiroth.android.library.numberpicker.NumberPicker
                android:id="@+id/numberPicker"
                style="@style/NumberPicker.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progress="1"
                app:picker_max="10"
                app:picker_min="1"
                app:picker_orientation="vertical"
                app:picker_stepSize="1"
                app:picker_tracker="exponential" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/size"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/chai_cup_cutting_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="12dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chai_cup_cutting"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_cutting_chai_cup" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cutting"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chai_cup_full_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/chai_cup_full"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_cutting_chai_cup" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/milk_type"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/two_fat_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:letterSpacing="0"
                android:text="2% Fat"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/colorAccent" />

            <Button
                android:id="@+id/full_fat_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:letterSpacing="0"
                android:text="Full Fat"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/colorAccent" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/generateRecipeButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Generate Recipe"
            android:textColor="@color/mudBrown"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>